--- a/templates/cliente/clienteforms.html
+++ b/templates/cliente/clienteforms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Forms</title>
+    <title>Forms</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -127,16 +127,15 @@
 </head>
 <body>
     <div class="navbar">
-        <h1>Admin Forms</h1>
+        <h1>Forms</h1>
         <div class="hamburger" onclick="toggleMenu()">
             <div></div>
             <div></div>
             <div></div>
         </div>
         <div class="menu">
-            <a href="/adminplatform">Plataforma</a>
-            <a href="/adminusuarios">Usuarios</a>
-            <a href="/admincatalogo">Catálogo</a>
+            <a href="/clientecatalogo">Catálogo</a>
+            <a href="/">Salir</a>
         </div>
     </div>
 
