--- a/templates/cliente/clientecatalogo.html
+++ b/templates/cliente/clientecatalogo.html
@@ -25,6 +25,7 @@
             font-size: 24px;
             flex: 1;
             text-align: left;
+            color: white;
         }
         .cart-icon {
             flex: 1;
@@ -117,6 +118,7 @@
         </div>
         <div class="menu">
             <a href="/clientecatalogo">Catálogo</a>
+            <a href="/clientecarrito">Carrito</a>
             <a href="/">Salir</a>
         </div>
     </div>
