--- a/templates/cliente/clienteforms.html
+++ b/templates/cliente/clienteforms.html
@@ -25,6 +25,7 @@
             font-size: 24px;
             flex: 1;
             text-align: left;
+            color: white;
         }
         .cart-icon {
             flex: 1;
@@ -171,7 +172,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h1>Catálogo</h1>
+        <h1>Formulario</h1>
         <div class="cart-icon">
             <a href="/clientecarrito" class="btn btn-outline-light">
                 <i class="bi bi-cart"></i> Carrito
@@ -184,11 +185,10 @@
         </div>
         <div class="menu">
             <a href="/clientecatalogo">Catálogo</a>
+            <a href="/clientecarrito">Carrito</a>
             <a href="/">Salir</a>
         </div>
     </div>
-
-    
 
     <div class="content">
         <div class="image-container">
@@ -248,5 +248,6 @@
             </form>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
