--- a/templates/cliente/clientecatalogo.html
+++ b/templates/cliente/clientecatalogo.html
@@ -126,10 +126,10 @@
     <div class="catalog-container">
         {% for item in catalogos %}
             <div class="model-card" onclick="redirectToForms('{{ item['model-uuid'] }}')">
-                <img src="{{ item['img']['modelos'] }}" alt="{{ item['Tipo de Modelo'] }}">
+                <img src="data:image/png;base64,{{ item['img']['modelos'] }}" alt="{{ item['Tipo de Modelo'] }}">
             </div>
         {% endfor %}
-    </div>
+    </div>    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
