Actualización del script de generación de la segunda página y ajustes visuales en Excel

--- a/templates/admin/adminusuarios.html
+++ b/templates/admin/adminusuarios.html
@@ -126,6 +126,7 @@
             <a href="/adminplatform">Plataforma</a>
             <a href="/adminusuarios">Usuarios</a>
             <a href="/admincatalogo">Catálogo</a>
+            <a href="/admindashboard">Dashboard</a>
             <a href="/">Salir</a>
         </div>
     </div>
