--- a/templates/login.html
+++ b/templates/login.html
@@ -112,6 +112,8 @@
             
             <button type="submit">Iniciar Sesión</button>
         </form>
+        <p>¿No tienes una cuenta? <a href="/registro">Registrarme</a></p>
     </div>
+    
 </body>
 </html>
