--- a/templates/admin/adminforms.html
+++ b/templates/admin/adminforms.html
@@ -148,6 +148,7 @@
             <a href="/adminplatform">Plataforma</a>
             <a href="/adminusuarios">Usuarios</a>
             <a href="/admincatalogo">Catálogo</a>
+            <a href="/admindashboard">Dashboard</a>
             <a href="/">Salir</a>
         </div>
     </div>
