Actualización del script de generación de la segunda página y ajustes visuales en Excel

--- a/templates/cliente/clienteforms.html
+++ b/templates/cliente/clienteforms.html
@@ -186,6 +186,7 @@
         <div class="menu">
             <a href="/clientecatalogo">Catálogo</a>
             <a href="/clientecarrito">Carrito</a>
+            <a href="/clientepedidos">Pedidos</a>
             <a href="/">Salir</a>
         </div>
     </div>
