--- a/templates/cliente/clientecatalogo.html
+++ b/templates/cliente/clientecatalogo.html
@@ -119,6 +119,7 @@
         <div class="menu">
             <a href="/clientecatalogo">Catálogo</a>
             <a href="/clientecarrito">Carrito</a>
+            <a href="/clientepedidos">Pedidos</a>
             <a href="/">Salir</a>
         </div>
     </div>
