--- a/templates/cliente/clienteforms.html
+++ b/templates/cliente/clienteforms.html
@@ -199,6 +199,10 @@
         <div class="form-container">
             <h2>Formulario de {{ model['Tipo de Modelo'] }}</h2>
             <form method="POST" action="{{ url_for('add_to_cart', model_uuid=model['model-uuid']) }}">
+                <div class="form-group">
+                    <label for="cantidad"><strong>Cantidad</strong></label>
+                    <input type="number" id="cantidad" name="cantidad" min="1" value="1" required>
+                </div>
                 {% for key, value in model['Forms'].items() %}
                     {% if key == "Tipo Urna" and value %}
                         <!-- Tipo Urna -->
@@ -211,7 +215,7 @@
                                 {% endfor %}
                             </select>
                         </div>
-    
+        
                         <!-- Colores -->
                         <div class="form-group">
                             <label for="color"><strong>Colores</strong></label>
@@ -219,7 +223,7 @@
                                 <option value="">Seleccione un tipo de urna primero</option>
                             </select>
                         </div>
-                    {% elif key != "Tipo Urna" %}
+                    {% elif key != "Tipo Urna" and key != "Mensaje" %}
                         <!-- Render otros campos -->
                         {% if value is string %}
                             <div class="form-group">
@@ -239,13 +243,18 @@
                         {% endif %}
                     {% endif %}
                 {% endfor %}
-                <div class="form-group">
-                    <label for="cantidad"><strong>Cantidad</strong></label>
-                    <input type="number" id="cantidad" name="cantidad" min="1" value="1" required>
-                </div>
                 <button type="submit">Añadir al carrito</button>
             </form>
+        
+            <!-- Mostrar el atributo Mensaje después del botón -->
+            {% if model['Forms'].get('Mensaje') %}
+                <div class="form-group mt-3">
+                    <label><strong>Mensaje</strong></label>
+                    <p>{{ model['Forms']['Mensaje'] }}</p>
+                </div>
+            {% endif %}
         </div>
+        
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
