--- a/templates/cliente/clientepedidos.html
+++ b/templates/cliente/clientepedidos.html
@@ -56,6 +56,7 @@
             top: 50px;
             padding: 10px;
             border-radius: 5px;
+            z-index: 1000;
         }
         .menu a {
             color: white;
@@ -108,7 +109,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h1>Carrito</h1>
+        <h1>Mis Pedidos</h1>
         <div class="cart-icon">
             <a href="/clientecarrito" class="btn btn-outline-light">
                 <i class="bi bi-cart"></i> Carrito
@@ -194,6 +195,13 @@
     <div class="text-center">
         <a href="{{ url_for('clientecatalogo') }}" class="btn btn-primary btn-back">Volver al Catálogo</a>
     </div>
+
+    <script>
+        function toggleMenu() {
+            const menu = document.querySelector(".menu");
+            menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+        }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
